--- a/src/Pages/HomePages/Banner/Banner.css
+++ b/src/Pages/HomePages/Banner/Banner.css
@@ -1,12 +1,26 @@
 .banner{
-    background-image: url('https://di-uploads-pod2.dealerinspire.com/sunshinekiaofmiami/uploads/2018/12/2018-12-20-14_14_32-Kia-CPO-_-Kia-Cars-including-Optima-Soul-Rio-More.png');
+    background-image: url('https://audiframework.com/wp-content/uploads/76_17TDI_ADSb221_r1_800px.jpg');
     height:70vh;
     background-repeat:no-repeat;
     background-position: center;
     background-size: cover;
     position: relative;
 }
-.banner h1{
-    font-family:fantasy;
-    color: rgb(241, 97, 97);
+.banner-shadow{
+    background-color: rgba(0, 0, 0, 0.575);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.banner-text h1{
+    font-family: fantasy;
+    color: rgb(245, 58, 11);
+}
+.banner-text h2{
+    font-family:inherit;
+    color: aliceblue;
+}
+.banner-text h3{
+    font-family:Impact;
+    color: rgb(63, 82, 252);
 }
